Синхронизировал конфиги из gamedata_28.06.2019

--- a/gamedata/config/creatures/game_relations.ltx
+++ b/gamedata/config/creatures/game_relations.ltx
@@ -20,7 +20,7 @@ goodwill_neutal = 0
 goodwill_friend = 800
 
 ;названия группировок
-communities     = actor, 0, actor_dolg, 1, actor_freedom, 2, stalker, 5, monolith, 6, military, 7, killer, 8, ecolog, 9, dolg, 10, freedom, 11, bandit, 12, zombied, 13, stranger, 14, trader, 15, arena_enemy, 16, actor_zombied, 17, csky, 18, actor_prebandit, 19, quest_stalker, 20, kulg_band, 21, bratstvo_9, 22, kulg_band_2, 23, neutral_military, 24, iskatel, 25, neutral_killer, 26, mil_stalker, 27, gunsmith, 28, guider, 29, voron_band, 30
+communities     = actor, 0, actor_dolg, 1, actor_freedom, 2, stalker, 5, monolith, 6, military, 7, killer, 8, ecolog, 9, dolg, 10, freedom, 11, bandit, 12, zombied, 13, stranger, 14, trader, 15, arena_enemy, 16, actor_zombied, 17, csky, 18, actor_prebandit, 19, quest_stalker, 20, kulg_band, 21, bratstvo_9, 22, kulg_band_2, 23, neutral_military, 24, iskatel, 25, neutral_killer, 26, mil_stalker, 27, gunsmith, 28, guider, 29, voron_band, 30, quest_monolith, 31
 
 
 ; отношение персонажа к актеру (или другому NPC) вычисляется по формуле
@@ -49,35 +49,36 @@ communities     = actor, 0, actor_dolg, 1, actor_freedom, 2, stalker, 5, monolit
 ;                     o     l     o     e     i     r     e     o     l     o     i     e     e     e     m     e     k     i     e     n     _     _     r     e     e     e     t     e
 ;                     r     g     m     r     t     y     r     g     g     m     t     d     r     r     y     d     y     t     r     d     9     2     y     l     r     r	  h     r
 ;========================================================================================================================================================================================
-actor            =    0,    0,    0,    0,-3000, -600,-1250,    0,    0,    0, -700,-2000,    0,    0,-1250,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-actor_dolg       =    0,    0,    0,    0,-3000, -650,-1500,  500,  650,-1250,-1250,-2000,    0,    0,-1250,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,  500,    0,    0
-actor_freedom    =    0,    0,    0,    0,-3000,-1500, -650,    0,-1250,  150, -350,-2000,    0,    0,-1250,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-stalker          =    0,    0,    0,   40,-2000,-1250,-1500,    0,    0,    0, -600,-2000,    0,    0,-1250, -150,    0, -200,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-monolith         =-3000,-3000,-3000,-2000,  400,-2000, -500, -750,-2000,-3000,-1250,  150,-1250,    0,-1250, -100,-3000,-3000,    0,    0,    0,    0,    0,    0,    0,-3000,    0,    0
-military         = -600, -650,-1500,-1250,-2000,  700,-1250,  250, -650,-1500,-2000,-2000, -100,    0,-1250,-1250,-3000,-2000,    0,    0,    0,    0,    0,    0,    0,  800,    0,    0
-killer           =-1250,-1250, -650,-1500, -500,-1250,  150,-1250,-1500, -650, -100,-2000,-1250,    0,-1250,-1250, -500, -500,    0,    0,    0,    0,    0,    0,    0,-1250,    0,    0
-ecolog           =    0,  500,    0,    0, -750,  250,-1250, 1250,  500,    0,-1000,-2000,    0,    0,    0,    0,    0, -100,    0,    0,    0,    0,    0,    0,    0,  800,    0,    0
-dolg             =    0,  250,-1250,    0,-3000, -650,-1500,  500,  650,-1250,-1250,-2000,    0,    0, -650,    0,    0, -150,    0,    0,    0,    0,    0,    0,    0,  500,    0,    0
-freedom          =    0, -150,  150,    0,-3000,-1500, -650,    0,-1250,  150,-1500,-2000,    0,    0,-1250,    0,    0, -150,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-bandit           = -700,-1000, -350, -600,-1250,-2000, -100,-1000,-1250,-1500,   40,-2000,-1250,    0,-1250,    0, -500,    0,    0,    0,    0,    0,    0,    0,    0,-2000,    0,    0
-zombied          =-2000,-2000,-2000,-2000,  150,-2000,-2000,-2000,-2000,-2000,-2000,  250,-1250,    0,-1250,    0, -500,-2000,    0,    0,    0,    0,    0,    0,    0,-2000,    0,    0
-stranger         =    0,    0,    0,    0,-1250, -100,-1250,    0,    0,    0,-1250,-1250,    0,    0,    0, -800,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-trader           =    0,    0,  -40,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-arena_enemy      =-1250,-1250,-1250,-1250,-1250,-1250,-1250,    0, -650,-1250,-1250,-1250,    0,    0,    0,-1250,-3000,-3000,    0,    0,    0,    0,    0,    0,    0,-1250,    0,    0
-actor_zombied    =    0,    0,    0, -150, -100,-1250,-1250,    0,    0,    0,    0,    0,    0,    0,-1250,    0, -400,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-csky             =    0,    0,    0,    0,-3000,-3000, -500,    0,    0,    0, -500, -500,    0,    0,-3000, -400,  600, -100,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-actor_prebandit  =    0,    0,    0, -200,-3000,-2000, -500, -100, -150, -150,    0,-2000,    0,    0,-3000,    0, -400,    0,    0,    0,    0,    0,    0,    0,    0,-1250,    0,    0
-quest_stalker    =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-kulg_band        =    0,    0,    0,    0,    -3000,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-bratstvo_9       =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-kulg_band_2      =-3000,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-neutral_military =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-iskatel          =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-neutral_killer   =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-mil_stalker      =    0,  500,    0,    0,-3000, 3000,-1250,  800,  500,    0,-2000,-2000,    0,    0,-1250,    0,    0,-1250,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-gunsmith         =    0,    0,  -40,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-guider       	 =    0,    0,  -40,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-voron_band        =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+actor            =    0,    0,    0,    0,-3000, -600,-1250,    0,    0,    0, -700,-2000,    0,    0,-1250,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+actor_dolg       =    0,    0,    0,    0,-3000, -650,-1500,  500,  650,-1250,-1250,-2000,    0,    0,-1250,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,  500,    0,    0,    0
+actor_freedom    =    0,    0,    0,    0,-3000,-1500, -650,    0,-1250,  150, -350,-2000,    0,    0,-1250,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+stalker          =    0,    0,    0,   40,-2000,-1250,-1500,    0,    0,    0, -600,-2000,    0,    0,-1250, -150,    0, -200,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+monolith         =-3000,-3000,-3000,-2000,  400,-2000, -500, -750,-2000,-3000,-1250,  150,-1250,    0,-1250, -100,-3000,-3000,    0,    0,    0,    0,    0,    0,    0,-3000,    0,    0,    0
+military         = -600, -650,-1500,-1250,-2000,  700,-1250,  250, -650,-1500,-2000,-2000, -100,    0,-1250,-1250,-3000,-2000,    0,    0,    0,    0,    0,    0,    0,  800,    0,    0,    0
+killer           =-1250,-1250, -650,-1500, -500,-1250,  150,-1250,-1500, -650, -100,-2000,-1250,    0,-1250,-1250, -500, -500,    0,    0,    0,    0,    0,    0,    0,-1250,    0,    0,    0
+ecolog           =    0,  500,    0,    0, -750,  250,-1250, 1250,  500,    0,-1000,-2000,    0,    0,    0,    0,    0, -100,    0,    0,    0,    0,    0,    0,    0,  800,    0,    0,    0
+dolg             =    0,  250,-1250,    0,-3000, -650,-1500,  500,  650,-1250,-1250,-2000,    0,    0, -650,    0,    0, -150,    0,    0,    0,    0,    0,    0,    0,  500,    0,    0,    0
+freedom          =    0, -150,  150,    0,-3000,-1500, -650,    0,-1250,  150,-1500,-2000,    0,    0,-1250,    0,    0, -150,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+bandit           = -700,-1000, -350, -600,-1250,-2000, -100,-1000,-1250,-1500,   40,-2000,-1250,    0,-1250,    0, -500,    0,    0,    0,    0,    0,    0,    0,    0,-2000,    0,    0,    0
+zombied          =-2000,-2000,-2000,-2000,  150,-2000,-2000,-2000,-2000,-2000,-2000,  250,-1250,    0,-1250,    0, -500,-2000,    0,    0,    0,    0,    0,    0,    0,-2000,    0,    0,    0
+stranger         =    0,    0,    0,    0,-1250, -100,-1250,    0,    0,    0,-1250,-1250,    0,    0,    0, -800,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+trader           =    0,    0,  -40,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+arena_enemy      =-1250,-1250,-1250,-1250,-1250,-1250,-1250,    0, -650,-1250,-1250,-1250,    0,    0,    0,-1250,-3000,-3000,    0,    0,    0,    0,    0,    0,    0,-1250,    0,    0,    0
+actor_zombied    =    0,    0,    0, -150, -100,-1250,-1250,    0,    0,    0,    0,    0,    0,    0,-1250,    0, -400,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+csky             =    0,    0,    0,    0,-3000,-3000, -500,    0,    0,    0, -500, -500,    0,    0,-3000, -400,  600, -100,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+actor_prebandit  =    0,    0,    0, -200,-3000,-2000, -500, -100, -150, -150,    0,-2000,    0,    0,-3000,    0, -400,    0,    0,    0,    0,    0,    0,    0,    0,-1250,    0,    0,    0
+quest_stalker    =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+kulg_band        =    0,    0,    0,    0,    -3000,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+bratstvo_9       =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+kulg_band_2      =-3000,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+neutral_military =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+iskatel          =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+neutral_killer   =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+mil_stalker      =    0,  500,    0,    0,-3000, 3000,-1250,  800,  500,    0,-2000,-2000,    0,    0,-1250,    0,    0,-1250,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+gunsmith         =    0,    0,  -40,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+guider       	 =    0,    0,  -40,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+voron_band        =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+quest_monolith        =    -3000,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
 ;========================================================================================================================================================================================
 ;                     a     a     a     s     m     m     k     e     d     f     b     z     s     t     a     a     c     a     q     k     b     k     n     i     n     m     g     g
 ;                     c     c     c     t     o     i     i     c     o     r     a     o     t     r     r     c     s     c     u     u     r     u     e     s     e     i     u     u
@@ -153,6 +154,7 @@ mil_stalker 	 = 0.3
 gunsmith         = 0.2
 guider           = 0.2
 voron_band		= 0.0
+quest_monolith		= 0.0
 ;
 ;очки рейтинга, получаемые за убийство персонажа
 ;с определенным статусом
