--- a/gamedata/config/creatures/spawn_sections.ltx
+++ b/gamedata/config/creatures/spawn_sections.ltx
@@ -1910,6 +1910,33 @@ custom_data = scripts\jek@n\kulg_band\cit_kulgband_sniper.ltx
 
 
 
+[cit_zapiska1_static]:zapiska_static
+visual = equipments\item_zapiska.ogf
+radius = 1
+custom_data = scripts\jek@n\city\cit_zapiska1_static.ltx
+
+[cit_zapiska2_static]:zapiska_static
+visual = equipments\item_zapiska.ogf
+radius = 1
+custom_data = scripts\jek@n\city\cit_zapiska2_static.ltx
+
+[cit_zapiska3_static]:zapiska_static
+visual = equipments\item_zapiska.ogf
+radius = 1
+custom_data = scripts\jek@n\city\cit_zapiska3_static.ltx
+
+
+[cit_zapiska2_mob]:bloodsucker_normal
+custom_data = scripts\jek@n\mobs\cit_zapiska2_mob.ltx
+
+[cit_zapiska3_mob]:burer_strong
+custom_data = scripts\jek@n\mobs\cit_zapiska3_mob.ltx
+
+
+
+
+
+
 
 
 
