--- a/gamedata/config/game_story_ids.ltx
+++ b/gamedata/config/game_story_ids.ltx
@@ -1021,7 +1021,23 @@
   7396          = "city_kulgband_glavar2"
   7397          = "cit_kulgband_car"
   7398          = "cit_kulgband_sniper"
-
+  
+  
+  7399          = "city_samogon_zapiska_zone1"
+  7400          = "city_samogon_zapiska_zone2"
+  7401          = "city_samogon_zapiska_zone3"
+  7402          = "city_samogon_zapiska_zone4"
+  7403          = "city_samogon_treasure"
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   8055          = "bar_wpn_ak74u"
 
   9000          = "esc_millitary_near_anomaly"
