--- a/gamedata/config/misc/death_items_by_communities.ltx
+++ b/gamedata/config/misc/death_items_by_communities.ltx
@@ -104,3 +104,12 @@ irp-b 				= 0.01
 [death_gen_gunsmith]:death_gen_stalker
 
 [death_gen_guider]:death_gen_stalker
+
+[death_gen_voron_band]:death_gen_stalker
+
+[death_gen_quest_monolith]:death_gen_stalker
+
+
+
+
+
