--- a/gamedata/config/misc/devices.ltx
+++ b/gamedata/config/misc/devices.ltx
@@ -419,7 +419,14 @@ visual = physics\vehicles\niva\veh_niva_u_01.ogf
 script_binding = bind_physic_object.init
 
 
-
+[zapiska_static]
+GroupControlSection = spawn_group
+discovery_dependency =
+$spawn = "devices\inventory box"
+class = SCRPTOBJ
+cform = skeleton
+visual = equipments\item_zapiska.ogf
+script_binding = bind_physic_object.init
 
 
 
