--- a/gamedata/config/misc/script_sound.ltx
+++ b/gamedata/config/misc/script_sound.ltx
@@ -1294,6 +1294,26 @@ stalker = 0,human_01\bandit\states\idle\idle_18
 stalker = 0,scenario\kulgband_lider_goodloot
 
 
+[dar_samogon_trance_rnd]
+stalker = 0,scenario\dar_samogon_trance_snd_ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
