--- a/gamedata/config/weapons/addon_glauncher.ltx
+++ b/gamedata/config/weapons/addon_glauncher.ltx
@@ -6,6 +6,8 @@ class			= W_GLAUNC
 cform           = skeleton
 $prefetch 		= 32
 
+inv_weight		= 0.0
+cost			= 1250
 
 ; ТЕСТ заглушка (нет подствола)
 [no_grenade_launcher]:wpn_grenade_launcher
