--- a/gamedata/config/weapons/addon_scope.ltx
+++ b/gamedata/config/weapons/addon_scope.ltx
@@ -5,6 +5,8 @@ class			= WP_SCOPE
 cform           = skeleton
 $prefetch 		= 32
 
+cost			= 1000
+
 ;запретить ПНВ 
 nightvision_lock	= true
 inv_weight		= 0.001
