--- a/gamedata/config/scripts/jek@n/iskatel/ds_nalet_band_1.ltx
+++ b/gamedata/config/scripts/jek@n/iskatel/ds_nalet_band_1.ltx
@@ -11,6 +11,7 @@ on_death = death
 path_walk =	proffesor_walk
 path_look =	proffesor_look
 on_info = {+yuriy_dead +bacha_dead +shaman_dead +dusty_dead +ahmet_dead} walker1, {+kulg_band_surrend} walker@new
+on_info2 = {+lesop_band_iskatel_fight_reznya} %=killactor%
 
 [walker1]
 path_walk =	yuriy_walk
@@ -24,7 +25,7 @@ path_look =	new_koster_point
 ignore_distance = 10
 
 [combat_ignore]
-combat_ignore_cond = always
+combat_ignore_cond = {-lesop_band_iskatel_fight_reznya} always
 
 [death]
 on_info = %+ds_nalet_band_1_dead%
