--- a/gamedata/config/scripts/jek@n/kulg_band/kulgband_hutor_deadman.ltx
+++ b/gamedata/config/scripts/jek@n/kulg_band/kulgband_hutor_deadman.ltx
@@ -23,14 +23,16 @@ def_state_moving3 = run
 on_signal       = arrived|remark@1
 
 [remark@1]
-anim = hello
+;anim = hello
+anim = wounded_stand_hello
 snd = kulgband_hutor_deadman_hello
-no_move = true
-;target = 7028
-target = actor
+target = 7028
+;target = actor
 combat_ignore_cond = always
 meet = no_meet
 on_signal = anim_end|walker@2 %+kulgband_hutor_deadman_hello%
+;on_signal = sound_end|walker@2 %+kulgband_hutor_deadman_hello%
+
 
 [walker@2]
 path_walk =	kulgband_hutor_deadman_walk1
