--- a/gamedata/config/scripts/jek@n/moonshine_apparat.ltx
+++ b/gamedata/config/scripts/jek@n/moonshine_apparat.ltx
@@ -2,17 +2,19 @@
 ignore_static
 
 [logic]
-active = ph_button@1
+active = ph_idle@1
 
-[ph_button@1]
-anim_blend  = true
-anim        = lab_primary_switcher_idle
-tooltip     = moonshine_apparat_use
-on_press    = ph_button@2 %=moonshine_apparat_use1%
+; Ожидание:
+[ph_idle@1]
+tips     = moonshine_apparat_use
+on_use    = ph_idle@2 %=moonshine_apparat_use1%
 
-[ph_button@2]
-anim_blend  = true
-anim        = lab_primary_switcher_idle
-tooltip     = moonshine_apparat_use_empty
-on_press    = %=moonshine_apparat_use2%
-on_timer = 180000 | ph_button@1
+[ph_idle@2]
+;tips     = moonshine_apparat_use_empty
+on_timer = 5000|ph_idle@4 %=moonshine_apparat_use2 =spawn_glassful_on_table%
+
+
+; Перезарядка:
+[ph_idle@4]
+tips     = moonshine_apparat_use_empty
+on_timer = 300000|ph_idle@1
