--- a/gamedata/config/scripts/jek@n/restrictions/rad_kulgband_assistant_zone.ltx
+++ b/gamedata/config/scripts/jek@n/restrictions/rad_kulgband_assistant_zone.ltx
@@ -2,4 +2,4 @@
 active = sr_idle
 
 [sr_idle] 
-on_info = {=actor_has_item(rad_kulgband_zapis) -rad_kulgband_zapis_info} nil %+rad_kulgband_zapis_info%
+on_info = {=actor_has_item(rad_kulgband_zapis) -rad_kulgband_zapis_info -kulgband_bridge_scout_pda_info} nil %+rad_kulgband_zapis_info%
