--- a/gamedata/config/weapons/w_mosin.ltx
+++ b/gamedata/config/weapons/w_mosin.ltx
@@ -144,13 +144,14 @@ zoom_enabled				= true
 ;для несъёмного - не наследуется! 
 scope_texture				= wpn\scopes\crosshair_pu
 ;наследуется разрешить ПНВ nightvision_lock	= true
+
 ;******************************************************************************
-;KRodin: Поднесём 3D-линзу поближе к морде актора - и scope_lense_fov_factor ~ scope_zoom_factor
-;******************************************************************************
-;для ПЫС-оптики (без 3D) ставить scope_zoom_factor = 3.5
-scope_zoom_factor 					= 1.0	;ставить для 3D-прицелов
-;НЕ комментить - ЧЁРНЫЙ scope_lense_fov_factor = 13.0		;в конфиге прицела 13 - КОРРЕКЦИЯ (ПОПРАВЛЕНО KRodin - 
-scope_lense_fov_factor = 8.0		;14 КОРРЕКЦИЯ 13 (ПОПРАВЛЕНО KRodin - тут работает)
+scope_zoom_factor      = 1 ;ставить для 3D-прицелов
+scope_lense_fov_factor = 5 ;FOV в 3D прицеле
+; Худ фов во время прицеливания, чтобы ствол был близко к камере и не залазил в камеру при выстреле
+scope_lense_hud_fov    = 0.15
+; Инерция мышки в прицеле
+scope_inertion_factor  = 5
 ;******************************************************************************
 
 silencer_name  				= wpn_addon_sil_762_tgp-v
@@ -205,12 +206,9 @@ anim_close_weapon			= reload_sni_close
 
 ;;;;;;;;;;;;;;;;;;;;;;Прицеливание через оптику (перекрывается текстуроЙ)
 ;прицеливание по умолчанию (по-старому, через "оптику" - ТЕКСТУРОЙ), альтернативное ОГСЕ (мех.прицел, МОДЕЛЬЮ) сбрасывается при установке любого аддона, включая ПЫС-подствол)
-;далеко-zoom_offset			= -0.100000,0.001800,-0.145000
-zoom_offset			= -0.100000,0.001800,-0.312999
+zoom_offset			= -0.100160,0.001790,-0.312999
 zoom_rotate_x		= 0.000700
 zoom_rotate_y		= 0.000100
-
-
 
 ;;;;;;;;;;;;;;;;;;;;;;Альтернативное прицеливание ОГСР через штатный механический прицел
 ;смещения HUD для режима приближения (прицеливание без увеличения)
@@ -218,8 +216,6 @@ zoom_rotate_y		= 0.000100
 second_zoom_offset			= -0.099500,0.030300,-0.284000
 second_zoom_rotate_x				= 0.0
 second_zoom_rotate_y				= 0.0
-
-
 
 zoom_hide_crosshair			= true
 
