--- a/gamedata/config/weapons/w_sks.ltx
+++ b/gamedata/config/weapons/w_sks.ltx
@@ -214,12 +214,15 @@ inv_weight		 			= 4.0		;3.75 +0.27 ПУ
 
 ;-ammo_mag_size		= 8		;-анимки обоймы семёрки
 ammo_class			= ammo_9x39_ap, ammo_9x39_pab9
-hit_power			= 0.81
-hit_impulse			= 35
-fire_distance	= 300   ;ОГСЕ 600 КОЭФФИЦИЕНТ максимальной дистанции  полета пули (затем она падает на землю и исчезает), реальная 200-400 м (баллистическая кривая должна быть более кривая, 1хрен дистанция остаётся больше А-Лайфа - в ОГСЕ switch_distance 150). Логично прописать значение эффективного огня(пистолеты-пулеметы 50-200м, пистолеты 50м, дробовики 30м и нож полметра)
-bullet_speed		= 400	;300
-silencer_hit_power       	= 0.70
-silencer_bullet_speed	 	= 350
+hit_power			= 1.1
+hit_impulse			= 40
+fire_distance	= 550   ;КОЭФФИЦИЕНТ максимальной дистанции  полета пули (затем она падает на землю и исчезает), реальная 200-400 м (баллистическая кривая должна быть более кривая, 1хрен дистанция остаётся больше А-Лайфа - в ОГСЕ switch_distance 150). Логично прописать значение эффективного огня(пистолеты-пулеметы 50-200м, пистолеты 50м, дробовики 30м и нож полметра)
+bullet_speed		= 700
+
+silencer_hit_power       	= 1.0
+silencer_hit_impulse	 	= 30
+silencer_fire_distance   	= 450
+silencer_bullet_speed	 	= 550
 
 fire_dispersion_base		= 0.15		;0.075 угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
 
@@ -236,12 +239,13 @@ scope_status 			 = 0			;1 - для второго (ОГСР) режима прицеливания будет использ
 scope_texture				= wpn\scopes\crosshair_pu
 ;наследуется разрешить ПНВ nightvision_lock	= true
 ;******************************************************************************
-;KRodin: Поднесём 3D-линзу поближе к морде актора - и scope_lense_fov_factor ~ scope_zoom_factor
-;******************************************************************************
 ;для ПЫС-оптики (без 3D) ставить scope_zoom_factor = 3.5
 scope_zoom_factor 					= 1.0	;ставить для 3D-прицелов
-;НЕ комментить - ЧЁРНЫЙ scope_lense_fov_factor = 13.0		;в конфиге прицела 13 - КОРРЕКЦИЯ (ПОПРАВЛЕНО KRodin - тут работает)
-scope_lense_fov_factor = 8.0		;14 КОРРЕКЦИЯ 13 (ПОПРАВЛЕНО KRodin - тут работает)
+scope_lense_fov_factor = 8 ;FOV в 3D прицеле
+; Худ фов во время прицеливания, чтобы ствол был близко к камере и не залазил в камеру при выстреле
+scope_lense_hud_fov    = 0.15
+; Инерция мышки в прицеле
+scope_inertion_factor  = 5
 ;******************************************************************************
 hud                     			= wpn_svu_m1_hud
 
@@ -250,7 +254,7 @@ hud                     			= wpn_svu_m1_hud
 visual = weapons\sks\wpn_sks_m1_hud.ogf
 ;;;;;;;;;;;;;;;;;;;;;;Прицеливание через оптику (перекрывается текстуроЙ)
 ;прицеливание по умолчанию (по-старому, через "оптику" - ТЕКСТУРОЙ), альтернативное ОГСЕ (мех.прицел, МОДЕЛЬЮ) сбрасывается при установке любого аддона, включая ПЫС-подствол)
-zoom_offset			= -0.130700,0.054250,-0.230000
+zoom_offset			= -0.131410,0.054060,-0.205000
 zoom_rotate_x		= 0.002200
 zoom_rotate_y		= 0.000900
 ;;;;;;;;;;;;;;;;;;;;;;Альтернативное прицеливание ОГСР через штатный механический прицел
