--- a/gamedata/config/weapons/w_crossbow.ltx
+++ b/gamedata/config/weapons/w_crossbow.ltx
@@ -116,6 +116,9 @@ zoom_hide_crosshair = true
 scope_zoom_factor 		= 1.0 		;ставить для сквозных 3D прицелов (1.66)
 ;_ТЕСТим 3D-зум 
 scope_lense_fov_factor = 12.0
+scope_lense_hud_fov    = 0.15
+scope_inertion_factor  = 3
+
 ;scope_texture = wpn\scopes\crosshair_cross_10-2
 scope_texture = wpn\scopes\scope_var_2
 
@@ -154,8 +157,7 @@ anim_close = holster
 anim_idle_aim = idle_aim
 anim_idle_sprint	= idle_sprint
 
-;-zoom_offset		= -0.08455,0.05766,-0.2			;далеко
-zoom_offset			= -0.084150,0.057860,-0.506997
+zoom_offset			= -0.084350,0.057810,-0.506997
 zoom_rotate_x		= 0.000000
 zoom_rotate_y		= 0.000000
 second_zoom_offset			= -0.084150,-0.002140,-0.506997
