--- a/gamedata/config/weapons/w_g36.ltx
+++ b/gamedata/config/weapons/w_g36.ltx
@@ -186,6 +186,8 @@ scope_zoom_factor 					= 1.0	;оптика (для сквозных 3D прицелов = 1.0; обычные те
 second_scope_zoom_factor 			= 1.0	;коллиматор
 ;НЕ комментить - ЧЁРНЫЙ scope_lense_fov_factor = 10.0		;в конфиге прицела 16 - КОРРЕКЦИЯ (ПОПРАВЛЕНО KRodin - 
 scope_lense_fov_factor = 10.0		;КОРРЕКЦИЯ (ПОПРАВЛЕНО KRodin - тут работает)
+scope_lense_hud_fov    = 0.15
+scope_inertion_factor  = 3
 ;KD: для встроенной оптики ставить ironsight_zoom_factor должен быть равен scope_zoom_factor; избыточен для некоторых типов оружия, но и вреда от него в этом случае тоже не будет
 ;******************************************************************************
 
@@ -312,11 +314,11 @@ anim_shoot_gl			= shoot_w_gl
 ;;;;;;;;;;;;;;;;;;;;;;Альтернативное прицеливание ОГСР через встроенный коллиматор 36 (штатный механический прицел)
 ;смещения HUD для режима приближения (прицеливание через коллиматор, без увеличения)
 ;ствол без установленного гранатомёта
-second_zoom_offset			= -0.137060,0.023370,-0.421998
+second_zoom_offset			= -0.137080,0.023270,-0.386998
 second_zoom_rotate_x		= 0.052700
 second_zoom_rotate_y		= 0.034080
 ;ствол с установленным гранатомётом в основном режиме (ствол)
-second_grenade_normal_zoom_offset		= -0.137060,0.023370,-0.421998
+second_grenade_normal_zoom_offset		= -0.137080,0.023270,-0.386998
 second_grenade_normal_zoom_rotate_x		= 0.052700
 second_grenade_normal_zoom_rotate_y		= 0.034080
 ;режим подствольника (положение д/б одинаковым - у подствола свой прицел)
@@ -325,14 +327,12 @@ second_grenade_zoom_rotate_x				= 0.061600
 second_grenade_zoom_rotate_y				= 0.058400
 ;;;;;;;;;;;;;;;;;;;;;;Прицеливание через оптику (перекрывается текстуроЙ)
 ;прицеливание по умолчанию (по-старому, через "оптику" - ТЕКСТУРОЙ), альтернативное ОГСЕ (мех.прицел, МОДЕЛЬЮ) сбрасывается при установке любого аддона, включая ПЫС-подствол)
-;-zoom_offset			= -0.136900,0.061000,-0.402998
-zoom_offset			= -0.137100,0.060500,-0.402998
+zoom_offset			= -0.137180,0.060470,-0.265998
 zoom_rotate_x		= 0.052700
 zoom_rotate_y		= 0.034080
 
 ;режим ствола
-;-grenade_normal_zoom_offset		= -0.136900,0.061000,-0.402998
-grenade_normal_zoom_offset		= -0.137100,0.060500,-0.402998
+grenade_normal_zoom_offset		= -0.137180,0.060470,-0.265998
 grenade_normal_zoom_rotate_x		= 0.052700
 grenade_normal_zoom_rotate_y		= 0.034080
 ;режим подствольника (положение д/б одинаковым - у подствола свой прицел)
