--- a/gamedata/config/weapons/w_m16a1_sk1.ltx
+++ b/gamedata/config/weapons/w_m16a1_sk1.ltx
@@ -1,5 +1,17 @@
 ; штурмовая винтовка US Rifle, 5.56mm, M16A1 (XM16E1)
 ;---------------------------------------------------
+; KRodin: поправил, теперь нормально работает переключение подствольных устройств при надетом прицеле, без вылетов и глюков!
+; Больше здесь НИЧЕГО НЕ МЕНЯТЬ!!! А то опять всё сломается!
+;---------------------------------------------------
+
+;+Colt 3X (3D)
+[xm16e1_colt]
+force_remove_texture = true
+bones         = muzzle
+;СКВОЗНОЙ 3D (со сдвигом)
+zoom_offset			= -0.142370,0.012620,-0.327998
+zoom_rotation		= 0.066700,0.051900
+
 [wpn_m16a1_sk1]:identity_immunities,base_wpn_zoom
 GroupControlSection		= spawn_group
 discovery_dependency 	= 
@@ -163,21 +175,25 @@ magazine_status			= 0
 
 
 ;Сменные аддоны ОГСЕ д/б: 
-scope_name = wpn_scope
+scope_name               = wpn_addon_scope_colt3
+scope                    = xm16e1_colt
+;KRodin: тут пусть будет пустой параметр, посмотрим.
+addon_mode_section = 
+
 scope_x 					= 66
 scope_y 					= -1		;-5
 zoom_enabled					= true
 ;для несъёмного - не наследуется! 
 scope_texture		= wpn\scopes\scope_ps
 
-;прицелы на ручку
-wpn_addon_scope_colt3  = wpn_xm16e1_colt
+;переходим в режим винтовки с подствольным гранатомётом
+wpn_addon_grenade_launcher_m203	= wpn_xm16e1_m203
+;переходим в режим винтовки с подствольным дробоганом wpn_addon_remington_870mcs (суть ружё)
+wpn_addon_remington_870mcs	= wpn_xm16e1mk_shg_a
 
 ;Прицел установлен в режиме ПГ (альтернативное смещение ХУДа при прицеливании)
 use_scope_grenade_zoom=true
 
-;******************************************************************************
-;KRodin: Поднесём 3D-линзу поближе к морде актора - и scope_lense_fov_factor ~ scope_zoom_factor
 ;******************************************************************************
 ;для ПЫС-оптики (без 3D) ставить scope_zoom_factor = 3.0
 scope_zoom_factor 					= 1.0	;ставить для 3D-прицелов
@@ -354,21 +370,9 @@ zoom_hide_crosshair				= true
 zoom_rotate_time				= 0.4
 rotate_time					= 0.4
 
-
-
 [wpn_m16a1_sk1_repair]
 tech_complication = 700
 repair_compatibility = m16
-
-
-
-
-
-
-
-
-
-
 
 
 ;-----------------------------------------------------------------------------------
@@ -426,86 +430,19 @@ repair_compatibility = m16
 ;2D models\transparent
 
 
-
-;-----------------------------------------------------------------------------------
-; служебные секции описателей прицелов
-
-;+Colt 3X (3D)
-[xm16e1_colt]
-force_remove_texture = true
-bones         = muzzle
-;СКВОЗНОЙ 3D (со сдвигом)
-zoom_offset			= -0.142370,0.012620,-0.327998
-zoom_rotation		= 0.066700,0.051900
-[xm16e1_colt_p]
-; движковый прицел
-scope_name               = wpn_addon_scope_colt3
-scope                    = xm16e1_colt
-;KRodin: тут пусть будет пустой параметр, посмотрим.
-addon_mode_section = 
-
-
-
-
-
-
-;-----------------------------------------------------------------------------------
-; служебные секции описателей магазинов
-
-
-
-;-----------------------------------------------------------------------------------
-; служебные секции описателей аддонов
-;кронштейн-переходник рукоять/Picatinny rail
-
-
-
-
-
-
-;-----------------------------------------------------------------------------------
-; секции оружия с аддонами
-;-----------------------------------------------------------------------------------
-;---------------------------------Эмка с прицелом colt на ручку
-[wpn_xm16e1_colt]:wpn_m16a1_sk1,xm16e1_colt_p
-;секция при снятом прицеле 
-scope_removed_section	 = wpn_m16a1_sk1
-;переходим в режим винтовки с подствольным гранатомётом
-wpn_addon_grenade_launcher_m203	= wpn_xm16e1_m203_colt
-;переходим в режим винтовки с подствольным дробоганом wpn_addon_remington_870mcs (суть ружё)
-wpn_addon_remington_870mcs	= wpn_xm16e1mk_colt_shg_a
-[wpn_xm16e1_colt_repair]:wpn_m16a1_sk1_repair
-
-
-;---------------------------------;---------------------------------Эмка с подствольным гранатомётом
+;---------------------------------Эмка с подствольным гранатомётом-----------------------------------
 [wpn_xm16e1_m203]:wpn_m16a1_sk1
-grenade_launcher_name 		= wpn_addon_grenade_launcher_m203
-;-остаётся скрытой после снятия подствола managed_bones = cevie
-;?запилить grenade_launcher_removed_section     = wpn_m16a1_sk1
-;прицелы на ручку 
-wpn_addon_scope_colt3  = wpn_xm16e1_m203_colt
+grenade_launcher_name = wpn_addon_grenade_launcher_m203
 [wpn_xm16e1_m203_repair]:wpn_m16a1_sk1_repair
-;---------------------------------Эмка с гранатомётом и прицелом colt на ручку
-[wpn_xm16e1_m203_colt]:wpn_xm16e1_m203,xm16e1_colt_p
-;секция при снятом прицеле 
-scope_removed_section	 = wpn_xm16e1_m203
-[wpn_xm16e1_m203_colt_repair]:wpn_m16a1_sk1_repair
 
 
-
-
-
-
-;---------------------------------;---------------------------------Эмка с подствольным дробоганом
+;---------------------------------Эмка с подствольным дробоганом--------------------------------------
 ;---------------------------------режим обычной стрельбы (винтовки)
 [wpn_xm16e1mk_shg_a]:wpn_m16a1_sk1
 $spawn         		    	= "weapons\uniq\wpn_xm16e1_shg_1"
 visual 				= weapons\m16\wpn_xm16e1mk.ogf
-;прицелы на ручку
-wpn_addon_scope_colt3  = wpn_xm16e1mk_colt_shg_a
 ;-остаётся скрытьй после снятия подствола managed_bones = cevie
 grenade_launcher_name 		= wpn_addon_remington_870mcs
-;grenade_launcher_status		= 2
 grenade_vel				    = 15
 grenade_launcher_x 				= 100
 grenade_launcher_y 				= 18
@@ -515,15 +452,6 @@ hud                      	= wpn_xm16e1mk_shg_a_hud
 [wpn_xm16e1mk_shg_a_hud]:wpn_xm16e1_hud
 visual 				= weapons\m16\wpn_xm16e1mk_hud.ogf
 [wpn_xm16e1mk_shg_a_repair]:wpn_m16a1_sk1_repair
-;---------------------------------Эмка с дровиком в режиме винтовки и прицелом colt на ручку
-[wpn_xm16e1mk_colt_shg_a]:wpn_xm16e1mk_shg_a,xm16e1_colt_p
-;секция при снятом прицеле 
-scope_removed_section	 = wpn_xm16e1mk_shg_a
-shotgun_mode_section		= wpn_xm16e1mk_colt_shg_b
-shotgun_removed_section     = wpn_xm16e1_colt
-[wpn_xm16e1mk_colt_shg_a_repair]:wpn_m16a1_sk1_repair
-
-
 
 ;---------------------------------режим подствольного дробовика
 [wpn_xm16e1mk_shg_b]:wpn_xm16e1mk_shg_a
@@ -539,10 +467,6 @@ ammo_elapsed			    = 4
 ammo_mag_size				= 4				;3(+1)
 fire_modes					= 1
 ammo_class		 			= ammo_12x70_kart, ammo_12x76_zhekan
-;прицелы на ручку
-wpn_addon_scope_colt3  = wpn_xm16e1mk_colt_shg_b
-;silencer_status				= 0
-;grenade_launcher_status		= 1
 ;базовая дисперсия
 fire_dispersion_base		= 0.46	;long 0.33 	;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
 disp_rate 			= 1.3
@@ -620,15 +544,16 @@ anim_add_cartridge_speed_k    = 1.6
 anim_close_weapon	= reload_mk_end
 ;_anim_close_weapon_speed_k    = 1.5
 [wpn_xm16e1mk_shg_b_repair]:wpn_m16a1_sk1_repair
-;---------------------------------Эмка с дровиком в режиме дровика и прицелом colt на ручку
-[wpn_xm16e1mk_colt_shg_b]:wpn_xm16e1mk_shg_b,xm16e1_colt_p
-;секция при снятом прицеле 
-scope_removed_section	 = wpn_xm16e1mk_shg_b
-rifle_mode_section			= wpn_xm16e1mk_colt_shg_a
-shotgun_mode_section		=
-shotgun_removed_section     = wpn_xm16e1_colt
-;_так оптика не выбьет глаз при стрельбе из ружбайки
-;_zoom_offset			= -0.142300,0.013300,-0.260999
-;_zoom_rotate_x		= 0.066700
-;_zoom_rotate_y		= 0.051900
+;----------------------------------------------------------------------------------------------------
+
+
+
+;Затычки для совместимости сейвов - можно смело избавиться от них с НИ
+[wpn_xm16e1mk_colt_shg_b]:wpn_xm16e1mk_shg_b
 [wpn_xm16e1mk_colt_shg_b_repair]:wpn_m16a1_sk1_repair
+[wpn_xm16e1_colt]:wpn_m16a1_sk1
+[wpn_xm16e1_colt_repair]:wpn_m16a1_sk1_repair
+[wpn_xm16e1_m203_colt]:wpn_xm16e1_m203
+[wpn_xm16e1_m203_colt_repair]:wpn_m16a1_sk1_repair
+[wpn_xm16e1mk_colt_shg_a]:wpn_xm16e1mk_shg_a
+[wpn_xm16e1mk_colt_shg_a_repair]:wpn_m16a1_sk1_repair
