--- a/gamedata/config/scripts/jek@n/restrictions/dar_samogon_trance_zone_all.ltx
+++ b/gamedata/config/scripts/jek@n/restrictions/dar_samogon_trance_zone_all.ltx
@@ -30,7 +30,7 @@ delay_max = 100
 stereo = false
 on_actor_in_zone = dar_samogon_trance_zone_all|nil %=run_postprocess(deadcity_wake_old) =teleport_actor_to_samogon_transe_zone2 =enable_ui -dar_samogon_trance +dar_samogon_trance_end%
 on_info = {!actor_in_samogon_trance_zones} %=teleport_actor_to_samogon_transe_zone1%
-on_info2 = {-222} %=run_postprocess(whiteblack) =disable_ui2%
+on_info2 = {-222} %=run_samogon_postprocess =disable_ui2%
 
 
 
