Уменьшил скорости квестового псевдыша

--- a/gamedata/config/creatures/m_giant.ltx
+++ b/gamedata/config/creatures/m_giant.ltx
@@ -437,10 +437,10 @@ immunities_sect       = x18_giant_immunities
 
 sound_idle				= monsters\giant\x18_hurt_
 
-Velocity_WalkFwdNormal	= 6.3,		4.0,			4.0,		0.1,	2.5
-Velocity_RunFwdNormal	= 16.5,		4.0,			4.0,		0.2,	1	
-Velocity_WalkFwdDamaged	= 7.5,		3.0,			3.0,		0.5,	1.5	
-Velocity_RunFwdDamaged	= 15.0,  	4.0,			4.0,		0.2,	1
+;Velocity_WalkFwdNormal	= 6.3,		4.0,			4.0,		0.1,	2.5
+;Velocity_RunFwdNormal	= 16.5,		4.0,			4.0,		0.2,	1	
+;Velocity_WalkFwdDamaged	= 7.5,		3.0,			3.0,		0.5,	1.5	
+;Velocity_RunFwdDamaged	= 15.0,  	4.0,			4.0,		0.2,	1
 
 sound_distant_idle			= monsters\giant2\giant_hurt_
 distant_idle_sound_range	= 200.0	
